# vqa-implementations

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py
configs/: butd.yaml  mcan.yaml  original_vqa.yaml  san.yaml
datasets/: README.md  vqa_dataset.py
models/: README.md  base_model.py  butd.py  mcan.py  original_vqa.py  san.py
scripts/: download_pretrained_models.py  prepare_vqa_dataset.py
tools/: evaluate.py  inference.py  train.py
utils/: metrics.py  vocab.py
